<resources>
    <string name="app_name">JotNote</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name_splash">Jot Notes</string>
    <string name="app_splash">Simple and Convenient</string>

    <string name="hello_first_fragment">Jot Note</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_notes">Empty Notes</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="timer">__:__ MM</string>
    <string name="date">__ /__ /____</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">done</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="add_note">Add Note</string>
</resources>