<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:title="@string/done"
        android:icon="@drawable/ic_baseline_done_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_redo_24"
        android:title="@string/redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>